[workspace]
resolver = "2"
members = ["nebula", "programs/orion_nebula", "integration_tests"]

[workspace.dependencies]

nebula = { path = "nebula" }

solana-program = "2"
solana-program-test = "2"
solana-sdk = "2"
solana-client = "2"
bytemuck = "1"
thiserror = "*"
borsh = "*"

tokio = "*"
static_assertions = "*"
sha2-const = { git = "https://github.com/ArigatoMev/sha2-const.git", branch = "stable" }
