[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]

tokio.workspace = true

solana-program-test.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true

orion_native = { path = "../programs/orion_native" }
orion_nebula = { path = "../programs/orion_nebula" }
