[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio.workspace = true

solana-program-test.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true

serde_json = "*"

orion_nebula = { path = "../programs/orion_nebula" }
